--- a/app.css
+++ b/app.css
@@ -1,16 +1,24 @@
 header{
     background: blue;
     color: aliceblue;
+    text-align: center;
+    height: 50px;
 }
 h1{
-    text-align: left;
+    
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 form{
     background: grey;
     border-color: black;
     color: white;
-    width: 50%;
-    margin-left: 125px;
+    width: 325px;
+    margin-left: 250px;
+    padding-top: 1px;
 }
+label, input
+{
+    margin-left: 10px;
+}
+
 
